Refactor all the TRAILZZ

--- a/applications/app/views/fragments/tagBody.scala.html
+++ b/applications/app/views/fragments/tagBody.scala.html
@@ -7,7 +7,7 @@
     @if(tag.isContributor) {
         <div class="profile media">
             @tag.contributorImagePath.map { url =>
-                <div class="profile-img media-img">
+                <div class="profile-img media__img">
                     <img src="@url" alt="@tag.name" />
                 </div>
             }
