cap layout to a maximum width of 940px

--- a/common/app/assets/stylesheets/head.scss
+++ b/common/app/assets/stylesheets/head.scss
@@ -16,6 +16,8 @@
 @import "base/_lists";
 
 //layout
+@import "layout/_grid-system";
+	@include grid-system;
 @import "layout/_layout";
 
 //Global modules
