--- a/common/app/assets/stylesheets/layout/_layout.scss
+++ b/common/app/assets/stylesheets/layout/_layout.scss
@@ -13,7 +13,6 @@
 }
 
 
-
 /* ==========================================================================
      Global header and navigation
      ========================================================================== */
@@ -73,7 +72,7 @@
     position: relative;
     top: 0;
     height: 100%;
-    width: 100%; 
+    width: 100%;
 }
 
 #preload-0,
@@ -83,6 +82,13 @@
     top: 0;
     height: 100%;
     width: 100%;
+}
+/* ==========================================================================
+    Parts (for swipe)
+     ========================================================================== */
+
+.parts {
+    @include temporarily-cap-content-width;
 }
 
 /*
