--- a/common/app/assets/stylesheets/module/_adslot.scss
+++ b/common/app/assets/stylesheets/module/_adslot.scss
@@ -8,9 +8,10 @@
     //For expandables
     position: relative;
     z-index: 1000;
-    @media only screen and (min-width: $desktopAd) {
-        min-height: 96px;
-    }
+    // We do not get desktop ads yet. Uncomment when needed.
+    // @media only screen and (min-width: $desktopAd) {
+    //     min-height: 96px;
+    // }
 
     iframe {
         margin: 0 auto;
