--- a/article/app/views/fragments/articleBody.scala.html
+++ b/article/app/views/fragments/articleBody.scala.html
@@ -58,10 +58,12 @@
 
 @if(DiscussionSwitch.isSwitchedOn && article.isCommentable) {
     <div class="article__discussion article-body"></div>
-    <a class="d-show-cta js-show-discussion js-top" href="/discussion/@article.shortUrlId"
-       data-is-ajax data-link-name="View all comments">
-        View all comments <span class="d-commentcount speech-bubble"><span class="js-commentcount__number"></span></span>
-    </a>
+    <div class="d-show-cta-wrapper">    
+        <a class="d-show-cta js-show-discussion js-top" href="/discussion/@article.shortUrlId"
+           data-is-ajax data-link-name="View all comments">
+            View all comments <span class="d-commentcount speech-bubble"><span class="js-commentcount__number"></span></span>
+        </a>
+    </div>
 }
 
 @if(storyPackage.nonEmpty) {
