--- a/common/app/assets/stylesheets/module/experiments/_article-breakpoints.scss
+++ b/common/app/assets/stylesheets/module/experiments/_article-breakpoints.scss
@@ -19,6 +19,10 @@
         margin-left: 0;
         margin-right: 0;
     }
+    .d-tabs__item--byline,
+    .byline {
+        font-size: 16px !important;
+    }
     .d-tabs__item--byline {
         padding-left: $baseline !important;
     }
