--- a/applications/app/views/fragments/videoBody.scala.html
+++ b/applications/app/views/fragments/videoBody.scala.html
@@ -1,39 +1,39 @@
 @(page: VideoPage)(implicit request: RequestHeader)
 
 @defining(page.video){ video =>
+    <div class="monocolumn-wrapper">
+        <h2 class="article-zone type-1">
+            <a class="zone-color" data-link-name="article section" href="/@video.section">@Html(video.sectionName)</a>
+        </h2>
+    
+        <article id="article" class="article video @if(video.isLive){is-live}" itemprop="mainContentOfPage"
+                 itemscope itemtype="@video.schemaType" role="main">
+            
+            <header class="article-head">
+                @fragments.dateline(video.webPublicationDate, video.isLive)
+                @fragments.headline(video.headline)
+            </header>
+        
+            <div class="player">
+                <video controls="controls" poster="@video.imageOfWidth(640).map{ image => @image.path }.getOrElse("")">
+                    @video.encodings.map{ encoding =>
+                        <source src="@encoding.url" />
+                    }
+                    Your browser does not support the video tag.
+                </video>
+            </div>
 
-    <h2 class="article-zone type-1">
-        <a class="zone-color" data-link-name="article section" href="/@video.section">@Html(video.sectionName)</a>
-    </h2>
+            <div class="gallery-byline">
+                @fragments.byline(video.byline, video)
+            </div>
+            <div class="video-standfirst">
+                @fragments.standfirst(video)
+            </div>
 
-    <article id="article" class="article video @if(video.isLive){is-live}" itemprop="mainContentOfPage"
-             itemscope itemtype="@video.schemaType" role="main">
+        </article>
 
-        <header class="article-head">
-            @fragments.dateline(video.webPublicationDate, video.isLive)
-            @fragments.headline(video.headline)
-        </header>
-
-        <div class="player">
-            <video controls="controls" poster="@video.imageOfWidth(640).map{ image => @image.path }.getOrElse("")">
-                @video.encodings.map{ encoding =>
-                    <source src="@encoding.url" />
-                }
-                Your browser does not support the video tag.
-            </video>
-        </div>
-
-        <div class="gallery-byline">
-            @fragments.byline(video.byline, video)
-        </div>
-        <div class="video-standfirst">
-            @fragments.standfirst(video)
-        </div>
-
-    </article>
-
-    @fragments.social(video)
-
+        @fragments.social(video)
+    </div>
     @if(page.storyPackage.nonEmpty) {
         <aside role="complementary">
             @fragments.relatedTrails(page.storyPackage, heading = "More on this story", visibleTrails = 5)
