escaping code in title tags

--- a/common/app/views/fragments/trails/featured.scala.html
+++ b/common/app/views/fragments/trails/featured.scala.html
@@ -24,7 +24,7 @@
                 }
                 itemprop="contentURL"
                 alt="@StripHtmlTags(smallCrop.altText.getOrElse(""))"
-                title="@StripHtmlTags(smallCrop.caption.getOrElse(""))"
+                title="@StripAndEscapeHtmlTags(smallCrop.caption.getOrElse(""))"
             />
         </a>
     }
